tests/NormalTests/paczka1/fuzzy1/77333959.err
Error in line 13: QGEcLHJ A465 28N0
Error in line 9: QGEcLHJ A465 6,3
Error in line 15: QGEcLHJ S105 60,2
Error in line 8: EwF S105 91,1
Error in line 28: EwF A465 79,5
Error in line 30: EwF S269 7,2
